--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@ RacingPrototype/[Bb]uilds/
 RacingPrototype/[Ll]ogs/
 RacingPrototype/[Mm]emoryCaptures/
 
+AgentResults/
+AnacondaScripts/
+
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
 
